refactor: switch to Java 21
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>